tests/semantic/comp_params_inheritance/comp_params_inheritance.err
Error: Undefined relation impl.R in file comp_params_inheritance.dl at line 10
    Base(x) :- impl.R(x).
---------------^----------
Error: Not all clauses could be typechecked due to other errors present
2 errors generated, evaluation aborted
